# ftsim

./: .gitignore  Cargo.toml  README.md  deny.toml  rust-toolchain.toml
.cargo/: config.toml
crates/ftsim-cli/: Cargo.toml  README.md
crates/ftsim-cli/src/: args.rs  logging.rs  main.rs  wiring.rs
crates/ftsim-cli/src/commands/: list_protocols.rs  mod.rs  run.rs  validate.rs
crates/ftsim-engine/: Cargo.toml  README.md
crates/ftsim-engine/src/: control.rs  errors.rs  events.rs  ids.rs  lib.rs  prelude.rs  rng.rs  sim.rs  world.rs
crates/ftsim-engine/src/net/: faults.rs  link.rs  mod.rs
crates/ftsim-engine/src/node/: mod.rs  runtime.rs  timers.rs
crates/ftsim-engine/src/scenario/: mod.rs
crates/ftsim-engine/src/store/: faulty.rs  mem.rs  mod.rs  trait.rs
crates/ftsim-engine/src/telemetry/: mod.rs  snapshot.rs  tracing_layer.rs
crates/ftsim-modelcheck/: Cargo.toml  README.md
crates/ftsim-modelcheck/src/: lib.rs
crates/ftsim-proto/: Cargo.toml  README.md
crates/ftsim-proto/src/: api.rs  ctx_ext.rs  lib.rs
crates/ftsim-proto/src/protocols/: mod.rs  primary_backup.rs
crates/ftsim-proto/src/protocols/raft_lite/: logic.rs  mod.rs  rpc.rs  state.rs
crates/ftsim-tui/: Cargo.toml  README.md
crates/ftsim-tui/src/: app.rs  input.rs  lib.rs  theme.rs
crates/ftsim-tui/src/ui/: help.rs  layout.rs  mod.rs
crates/ftsim-tui/src/ui/widgets/: graph.rs  logs.rs  metrics.rs  mod.rs  status.rs
crates/ftsim-types/: Cargo.toml  README.md
crates/ftsim-types/src/: config.rs  envelope.rs  errors.rs  id.rs  lib.rs  metrics.rs  scenario.rs  time.rs  topology.rs
scenarios/: asymmetric_partition.toml  byzantine_faults.toml  cascading_failures.toml  chaos_engineering_stress_test.toml  clock_skew_test.toml  datacenter_maintenance.toml  flapping_network.toml  gradual_network_degradation.toml  long_lived_partition.toml  network_congestion_patterns.toml  primary_backup.toml  primary_backup_split_brain.toml  raft_leadership_thrashing.toml  raft_partition.toml  rolling_restart.toml  storage_corruption.toml
