# This is the root Cargo.toml for the FTSim workspace.
# It defines the member crates and global settings like dependency patching.

[workspace]
resolver = "2"
members = [
    "crates/ftsim-types",
    "crates/ftsim-proto",
    "crates/ftsim-engine",
    "crates/ftsim-tui",
    "crates/ftsim-cli",
    "crates/ftsim-modelcheck",
]

[workspace.dependencies]
# Shared dependencies for consistent versions across the workspace.
anyhow = "1.0"
bytes = "1.5"
clap = { version = "4.4", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.27"
fxhash = "0.2"
indexmap = { version = "2.1", features = ["serde"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
petgraph = "0.6"
postcard = { version = "1.0", features = ["alloc"] }
rand = "0.8"
rand_chacha = "0.3"
ratatui = { version = "0.25", features = ["all-widgets"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }

# Model checking dependencies (optional)
loom = "0.7"
shuttle = "0.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
