[package]
name = "ftsim-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ftsim"
path = "src/main.rs"

[dependencies]
ftsim-types = { path = "../ftsim-types" }
ftsim-proto = { path = "../ftsim-proto" }
ftsim-engine = { path = "../ftsim-engine" }
ftsim-tui = { path = "../ftsim-tui", optional = true }

anyhow = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
rand = { workspace = true }
serde_yaml = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["tui"]
tui = ["dep:ftsim-tui"]
