[package]
name = "ftsim-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ftsim-types = { path = "../ftsim-types" }
ftsim-engine = { path = "../ftsim-engine" }

anyhow = { workspace = true }
crossbeam-channel = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
tracing = { workspace = true }
